--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div class="whatsapp-box">
       <p>Fale conosco no WhatsApp para mais informações!</p>
-      <a class="btn-whatsapp" href="https://w.app/chaveirocentral" target="_blank">Enviar mensagem</a>
+      <a class="btn-whatsapp" href="https://wa.me/5519997416088?text=Ola%20Preciso%20de%20um%20Chaveiro!!" target="_blank">Enviar mensagem</a>
     </div>
   </div>
 <div class="faixa-inferior">
